Ant compilation unit: management of multi project Log4j configuration the right place
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@78 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/BasicMTL_projects/BasicMtlAntlr2BasicMtlAstJava/build.xml
+++ b/BasicMTL_projects/BasicMtlAntlr2BasicMtlAstJava/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.1 2003-08-06 16:20:33 jpthibau Exp $ -->
+<!-- $Id: build.xml,v 1.2 2003-08-12 14:51:55 ffondeme Exp $ -->
 <project name="BasicMtlAntlr2BasicMtlAstJava" default="compile_java" basedir=".">
 	<description>
         Known directories for the Antlr2BasicMtlAST
@@ -7,6 +7,12 @@
 	<property name="src" location="src"/>
 	<property name="bin" location="bin"/>
 	<property name="dist"  location="dist"/>
+	
+	<!-- This project depends on the BasicMtlAntlr and BasicMtlAstJava projects -->
+	<property name="BasicMtlAntlr"  location="..\BasicMtlAntlr"/>
+	<property name="BasicMtlAstJava"  location="..\BasicMtlAstJava"/>
+	<!-- This project deeply depends on the Utils project -->
+	<property name="Utils"  location="..\Utils"/>
 
 	<target name="init">
     	<!-- Create the time stamp -->
@@ -15,6 +21,14 @@
 	    <mkdir dir="${bin}"/>
 	    <mkdir dir="${dist}"/>
 	    <mkdir dir="${dist}/bin"/>
+	    
+		<!-- This project depends on the BasicMtlAntlr and BasicMtlAstJava projects -->
+	    <echo>Building the "BasicMtlAntlr" project.</echo>
+	    <ant antfile="${BasicMtlAntlr}\build.xml" dir="${BasicMtlAntlr}" target="dist" inheritAll="false"/>
+	    <echo>"BasicMtlAntlr" project built.</echo>
+	    <echo>Building the "BasicMtlAstJava" project.</echo>
+	    <ant antfile="${BasicMtlAstJava}\build.xml" dir="${BasicMtlAstJava}" target="dist" inheritAll="false"/>
+	    <echo>"BasicMtlAstJava" project built.</echo>
 	</target>
 
 	<target name="compile_java" depends="init"
@@ -22,7 +36,7 @@
     	<!-- Compile the java code from ${src} into ${bin} -->
 	    <javac srcdir="${src}" 
     	    destdir="${bin}"
-   			classpath=".;ThirdParty\junit\junit.jar;ThirdParty\log4j\log4j.jar"/>
+   			classpath=".;${BasicMtlAntlr}\bin;${BasicMtlAstJava}\bin;${Utils}\bin;..\Utils\ThirdParty\log4j\log4j.jar"/>
 	</target>
   	<target name="full_javadoc" 
   		description="create a full javadoc document that describes all the classes of the project">
@@ -32,23 +46,23 @@
             nodeprecatedlist="false" nodeprecated="false"
             packagenames="antlr2ASTJava"
             sourcepath="src"
-            classpath="bin;ThirdParty\junit\junit.jar;ThirdParty\log4j\log4j.jar" doctitle="Basic MTL ANTLR2TLL (Unchecked TLL producer) internal Documentation">
+            classpath="bin;${BasicMtlAntlr}\bin;${BasicMtlAstJava}\bin;${Utils}\bin;..\Utils\ThirdParty\log4j\log4j.jar" doctitle="Basic MTL ANTLR2TLL (Unchecked TLL producer) internal Documentation">
             <link href="http://www.junit.org/junit/javadoc/3.8.1/index.htm"/>
             <link href="file:/T:/Soft/multiplatform/Java_lib/log4j/jakarta-log4j-1.2.8/docs/api/"/>
         </javadoc>
 	</target>
 	<target name="create_jar" depends="compile_java"
 		description="create the jar file">
-		<jar destfile="${dist}/bin/BasicMtl2AST.jar">
+		<jar destfile="${dist}/bin/${ant.project.name}.jar">
 			<!-- files to include in the jar -->
 			<fileset dir="${bin}"/>
 			<!-- manifest to include -->
 		    <manifest>
 		    	<attribute name="Built-By" value="${user.name}"/>   
 		    	<attribute name="Main-Class" value="antlr2ASTJava.antlr2ast"/>
-				<attribute name="Class-Path" value="log4j.jar junit.jar"/>
-		    	<section name="BasicMTLAntlr2BasicMtlAstJava">
-		      		<attribute name="Specification-Title" value="BasicMTLAntlr2ASTjava"/>
+				<attribute name="Class-Path" value="BasicMtlAntlr.jar BasicMtlAstJava.jar Utils.jar ThirdParty/log4j/log4j.jar"/>
+		    	<section name="${ant.project.name}">
+		      		<attribute name="Specification-Title" value="${ant.project.name}"/>
       				<attribute name="Specification-Version" value="${TSTAMP} ${TODAY}"/>
       				<attribute name="Specification-Vendor" value="Irisa/Triskell"/>
       				<attribute name="Implementation-Title" value="common"/>
@@ -62,13 +76,17 @@
 	<target name="dist" depends="create_jar"
 		description="create a distibution">
 		<mkdir dir="${dist}"/>
-	    <mkdir dir="${dist}/bin/ThirdParty/log4j"/>
-	    <copy file="ThirdParty/log4j/log4j_configuration"
-	    	todir="${dist}/bin/ThirdParty/log4j"/>
-	    <copy file="../Utils/ThirdParty/log4j/log4j.jar"
-	    	todir="${dist}/bin"/>
-	    <copy file="../Utils/ThirdParty/junit/junit.jar"
-	    	todir="${dist}/bin"/>
+		<!-- This project depends on the BasicMtlAntlr and BasicMtlAstJava projects -->
+		<copy todir="${dist}/bin">
+			<fileset dir="${BasicMtlAntlr}\dist\bin"/>
+		</copy>
+		<copy todir="${dist}/bin">
+			<fileset dir="${BasicMtlAstJava}\dist\bin"/>
+		</copy>
+		
+	    <copy file="log4j_configuration.xml"
+	    	todir="${dist}/bin"
+	    	overwrite="true"/>
 	</target>
 
   	<target name="clean"
@@ -77,4 +95,12 @@
     	<delete dir="${bin}"/>    
       	<delete dir="${dist}"/> 
   	</target>
+
+  	<target name="deep_clean" depends="clean"
+        description="deep clean up (including depending projects)" >
+	    
+		<!-- This project depends on the BasicMtlAntlr and BasicMtlAstJava projects -->
+	    <ant antfile="${BasicMtlAntlr}\build.xml" dir="${BasicMtlAntlr}" target="deep_clean" inheritAll="false"/>
+	    <ant antfile="${BasicMtlAstJava}\build.xml" dir="${BasicMtlAstJava}" target="deep_clean" inheritAll="false"/>
+    </target>
 </project>
