--- a/BasicMTL_projects/TLLTypeChecker/.project
+++ b/BasicMTL_projects/TLLTypeChecker/.project
@@ -5,6 +5,7 @@
 	<projects>
 		<project>BasicMtlAntlr2TLLJava</project>
 		<project>BasicMtlTLLJava</project>
+		<project>Utils</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
