--- a/BasicMTL_projects/BasicMtlAntlr2BasicMtlAstJava/.classpath
+++ b/BasicMTL_projects/BasicMtlAntlr2BasicMtlAstJava/.classpath
@@ -4,6 +4,7 @@
     <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
     <classpathentry kind="src" path="/BasicMtlAntlr"/>
     <classpathentry kind="src" path="/BasicMtlAstJava"/>
-    <classpathentry kind="lib" path="ThirdParty/log4j/log4j.jar"/>
+    <classpathentry kind="lib" path="/Utils/ThirdParty/log4j/log4j.jar"/>
+    <classpathentry kind="src" path="/Utils"/>
     <classpathentry kind="output" path="bin"/>
 </classpath>
