--- a/BasicMTL_projects/BasicMtlAstJava/build.xml
+++ b/BasicMTL_projects/BasicMtlAstJava/build.xml
@@ -1,13 +1,16 @@
-<!-- $Id: build.xml,v 1.3 2003-08-08 13:55:23 dvojtise Exp $ -->
+<!-- $Id: build.xml,v 1.4 2003-08-12 14:52:43 ffondeme Exp $ -->
 <project name="BasicMtlAstJava" default="dist" basedir=".">
 	<description>
-        Known directories for the BAsicMtlAST
+        Known directories for the BasicMtlAST
 	</description>
 	<!-- set global properties for this build -->
 	<property name="src" location="src"/>
 	<property name="srcOfp" location="srcOfp"/>
 	<property name="bin" location="bin"/>
 	<property name="dist"  location="dist"/>
+	
+	<!-- This project depends on the Utils project -->
+	<property name="Utils"  location="..\Utils"/>
 
 	<target name="init">
     	<!-- Create the time stamp -->
@@ -16,6 +19,11 @@
 	    <mkdir dir="${bin}"/>
 	    <mkdir dir="${dist}"/>
 	    <mkdir dir="${dist}/bin"/>
+	    
+	    <!-- This project depends on the Utils project -->
+	    <echo>Building the "Utils" project.</echo>
+	    <ant antfile="${Utils}\build.xml" dir="${Utils}" target="dist" inheritAll="false"/>
+	    <echo>"Utils" project built.</echo>
 	</target>
 
 	<target name="compile_java" depends="init"
@@ -23,7 +31,7 @@
     	<!-- Compile the java code from ${src} and ${srcOfp} into ${bin} -->
 	    <javac srcdir="${src};${srcOfp}" 
     	    destdir="${bin}"
-   			classpath="."/>
+   			classpath=".;${Utils}\bin"/>
 	</target>
   	<target name="full_javadoc" 
   		description="create a full javadoc document that describes all the classes of the project">
@@ -45,16 +53,16 @@
 	</target>
 	<target name="create_jar" depends="compile_java"
 		description="create the jar file">
-		<jar destfile="${dist}/bin/BasicMtlASTJava.jar">
+		<jar destfile="${dist}/bin/${ant.project.name}.jar">
 			<!-- files to include in the jar -->
 			<fileset dir="${bin}"/>
 			<!-- manifest to include -->
 		    <manifest>
 		    	<attribute name="Built-By" value="${user.name}"/>   
 		    	<attribute name="Main-Class" value="ASTTopDownVisitor.topDownVisitor"/>
-				<attribute name="Class-Path" value="."/>
-		    	<section name="BasicMTLASTJava">
-		      		<attribute name="Specification-Title" value="BasicMTLAstJava"/>
+				<attribute name="Class-Path" value="Utils.jar"/>
+		    	<section name="${ant.project.name}">
+		      		<attribute name="Specification-Title" value="${ant.project.name}"/>
       				<attribute name="Specification-Version" value="${TSTAMP} ${TODAY}"/>
       				<attribute name="Specification-Vendor" value="Irisa/Triskell"/>
       				<attribute name="Implementation-Title" value="common"/>
@@ -68,6 +76,15 @@
 	<target name="dist" depends="create_jar"
 		description="create a distibution">
 		<mkdir dir="${dist}"/>
+		<!-- This project depends on the Utils project -->
+		<copy todir="${dist}/bin">
+			<fileset dir="${Utils}\dist\bin"/>
+		</copy>
+		
+		<!-- There is no need of junit and log4j ; non need of ThirdParty-->
+		<!--delete dir="${dist}/bin/ThirdParty/JUnit"/>
+		<delete dir="${dist}/bin/ThirdParty/log4j"/-->
+		<delete dir="${dist}/bin/ThirdParty"/>
 	</target>
 	<target name="redist" depends="clean" description="clean then dist">
 		<antcall target="dist"/>    
@@ -87,4 +104,11 @@
     	<delete dir="${bin}"/>    
       	<delete dir="${dist}"/> 
   	</target>
+
+  	<target name="deep_clean" depends="clean"
+        description="deep clean up (including depending projects)" >
+	    
+	    <!-- This project depends on the Utils project -->
+	    <ant antfile="${Utils}\build.xml" dir="${Utils}" target="deep_clean" inheritAll="false"/>
+    </target>
 </project>
