--- a/BasicMTL_projects/BasicMtlJavaCodeGenerator/build.xml
+++ b/BasicMTL_projects/BasicMtlJavaCodeGenerator/build.xml
@@ -1,5 +1,5 @@
-<!-- $Id: build.xml,v 1.1 2003-08-08 15:41:13 jpthibau Exp $ -->
-<project name="BasicMtlJavaCodeGenerator" default="compile_java" basedir=".">
+<!-- $Id: build.xml,v 1.2 2003-08-12 14:52:55 ffondeme Exp $ -->
+<project name="BasicMtlJavaCodeGenerator" default="dist" basedir=".">
 	<description>
         Known directories for the code generator
 	</description>
@@ -7,6 +7,10 @@
 	<property name="src" location="src"/>
 	<property name="bin" location="bin"/>
 	<property name="dist"  location="dist"/>
+	
+	<!-- This project depends on the BasicMtlTLLJava and Utils projects -->
+	<property name="BasicMtlTLLJava"  location="..\BasicMtlTLLJava"/>
+	<property name="Utils"  location="..\Utils"/>
 
 	<target name="init">
     	<!-- Create the time stamp -->
@@ -15,6 +19,14 @@
 	    <mkdir dir="${bin}"/>
 	    <mkdir dir="${dist}"/>
 	    <mkdir dir="${dist}/bin"/>
+	    
+		<!-- This project depends on the BasicMtlTLLJava and Utils projects -->
+	    <echo>Building the "BasicMtlTLLJava" project.</echo>
+	    <ant antfile="${BasicMtlTLLJava}\build.xml" dir="${BasicMtlTLLJava}" target="dist" inheritAll="false"/>
+	    <echo>"BasicMtlTLLJava" project built.</echo>
+	    <echo>Building the "Utils" project.</echo>
+	    <ant antfile="${Utils}\build.xml" dir="${Utils}" target="dist" inheritAll="false"/>
+	    <echo>"Utils" project built.</echo>
 	</target>
 
 	<target name="compile_java" depends="init"
@@ -22,7 +34,7 @@
     	<!-- Compile the java code from ${src} into ${bin} -->
 	    <javac srcdir="${src}" 
     	    destdir="${bin}"
-   			classpath=".;ThirdParty\junit\junit.jar;ThirdParty\log4j\log4j.jar"/>
+   			classpath=".;${BasicMtlTLLJava}\bin;${Utils}/bin;../Utils/ThirdParty\log4j\log4j.jar"/>
 	</target>
   	<target name="full_javadoc" 
   		description="create a full javadoc document that describes all the classes of the project">
@@ -32,23 +44,23 @@
             nodeprecatedlist="false" nodeprecated="false"
             packagenames="CodeGeneration,FirstPassGeneration,SecondPassGeneration"
             sourcepath="src"
-            classpath="bin;ThirdParty\junit\junit.jar;ThirdParty\log4j\log4j.jar" doctitle="Basic MTL code generator internal Documentation">
+            classpath="bin;${BasicMtlTLLJava}\bin;${Utils}/bin;../Utils/ThirdParty\log4j\log4j.jar" doctitle="Basic MTL code generator internal Documentation">
             <link href="http://www.junit.org/junit/javadoc/3.8.1/index.htm"/>
             <link href="file:/T:/Soft/multiplatform/Java_lib/log4j/jakarta-log4j-1.2.8/docs/api/"/>
         </javadoc>
 	</target>
 	<target name="create_jar" depends="compile_java"
 		description="create the jar file">
-		<jar destfile="${dist}/bin/TLLCodeGenerator.jar">
+		<jar destfile="${dist}/bin/${ant.project.name}.jar">
 			<!-- files to include in the jar -->
 			<fileset dir="${bin}"/>
 			<!-- manifest to include -->
 		    <manifest>
 		    	<attribute name="Built-By" value="${user.name}"/>   
 		    	<attribute name="Main-Class" value="CodeGeneration.BMTLCompiler"/>
-				<attribute name="Class-Path" value="log4j.jar junit.jar BasicMtlTLLJava.jar"/>
-		    	<section name="BasicMTLAntlr2BasicMtlAstJava">
-		      		<attribute name="Specification-Title" value="BasicMTLCodeGenerator"/>
+				<attribute name="Class-Path" value="log4j.jar junit.jar BasicMtlTLLJava.jar Utils.jar ThirdParty/log4j/log4j.jar"/>
+		    	<section name="${ant.project.name}">
+		      		<attribute name="Specification-Title" value="${ant.project.name}"/>
       				<attribute name="Specification-Version" value="${TSTAMP} ${TODAY}"/>
       				<attribute name="Specification-Vendor" value="Irisa/Triskell"/>
       				<attribute name="Implementation-Title" value="common"/>
@@ -62,15 +74,19 @@
 	<target name="dist" depends="create_jar"
 		description="create a distibution">
 		<mkdir dir="${dist}"/>
-	    <copy file="../BasicMtlTLLJava/dist/bin/BasicMtlTLLJava.jar"
-	    	todir="${dist}/bin/"/>
-	    <mkdir dir="${dist}/bin/ThirdParty/log4j"/>
-	    <copy file="ThirdParty/log4j/log4j_configuration"
-	    	todir="${dist}/bin/ThirdParty/log4j"/>
-	    <copy file="../Utils/ThirdParty/log4j/log4j.jar"
-	    	todir="${dist}/bin"/>
-	    <copy file="../Utils/ThirdParty/junit/junit.jar"
-	    	todir="${dist}/bin"/>
+		<!-- This project depends on the BasicMtlTLLJava and Utils projects -->
+		<copy todir="${dist}/bin">
+			<fileset dir="${BasicMtlTLLJava}\dist\bin"/>
+		</copy>
+		<copy todir="${dist}/bin">
+			<fileset dir="${Utils}\dist\bin"/>
+		</copy>
+		
+	    <copy file="log4j_configuration.xml"
+	    	todir="${dist}/bin"
+	    	overwrite="true"/>
+		<!-- There is no need of junit-->
+		<delete dir="${dist}/bin/ThirdParty/JUnit"/>
 	</target>
 
   	<target name="clean"
@@ -79,4 +95,12 @@
     	<delete dir="${bin}"/>    
       	<delete dir="${dist}"/> 
   	</target>
+
+  	<target name="deep_clean" depends="clean"
+        description="deep clean up (including depending projects)" >
+	    
+		<!-- This project depends on the BasicMtlTLLJava and Utils projects -->
+	    <ant antfile="${BasicMtlTLLJava}\build.xml" dir="${BasicMtlTLLJava}" target="deep_clean" inheritAll="false"/>
+	    <ant antfile="${Utils}\build.xml" dir="${Utils}" target="deep_clean" inheritAll="false"/>
+    </target>
 </project>
