--- a/BasicMTL_projects/BasicMtlTLLJava/build.xml
+++ b/BasicMTL_projects/BasicMtlTLLJava/build.xml
@@ -1,7 +1,7 @@
-<!-- $Id: build.xml,v 1.2 2003-08-08 13:57:27 dvojtise Exp $ -->
+<!-- $Id: build.xml,v 1.3 2003-08-12 14:53:11 ffondeme Exp $ -->
 <project name="BasicMtlTLLJava" default="dist" basedir=".">
 	<description>
-        Known directories for the BAsicMtlTLL
+        Known directories for the BasicMtlTLL
 	</description>
 	<!-- set global properties for this build -->
 	<property name="src" location="src"/>
@@ -46,7 +46,7 @@
 	</target>
 	<target name="create_jar" depends="compile_java"
 		description="create the jar file">
-		<jar destfile="${dist}/bin/BasicMtlTLLJava.jar">
+		<jar destfile="${dist}/bin/${ant.project.name}.jar">
 			<!-- files to include in the jar -->
 			<fileset dir="${bin}"/>
 			<!-- manifest to include -->
@@ -54,8 +54,8 @@
 		    	<attribute name="Built-By" value="${user.name}"/>   
 		    	<attribute name="Main-Class" value="TLLTopDownVisitor.topDownVisitor"/>
 				<attribute name="Class-Path" value="."/>
-		    	<section name="BasicMTLTLLJava">
-		      		<attribute name="Specification-Title" value="BasicMTLTLLJava"/>
+		    	<section name="${ant.project.name}">
+		      		<attribute name="Specification-Title" value="${ant.project.name}"/>
       				<attribute name="Specification-Version" value="${TSTAMP} ${TODAY}"/>
       				<attribute name="Specification-Vendor" value="Irisa/Triskell"/>
       				<attribute name="Implementation-Title" value="common"/>
@@ -66,7 +66,7 @@
 		</jar>
 	</target>
 	
-	<target name="dist" depends="create_jar,full_javadoc"
+	<target name="dist" depends="create_jar"
 		description="create a distibution">
 		<mkdir dir="${dist}"/>
 	</target>	
@@ -89,4 +89,9 @@
     	<delete dir="${bin}"/>    
       	<delete dir="${dist}"/> 
   	</target>
+  	
+  	<target name="deep_clean" depends="clean"
+        description="deep clean up (including depending projects)" >
+	    
+    </target>
 </project>
