--- a/BasicMTL_projects/TLLTypeChecker/.classpath
+++ b/BasicMTL_projects/TLLTypeChecker/.classpath
@@ -3,7 +3,8 @@
     <classpathentry kind="src" path="src"/>
     <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
     <classpathentry kind="src" path="/BasicMtlTLLJava"/>
-    <classpathentry kind="lib" path="ThirdParty/log4j/log4j.jar"/>
     <classpathentry kind="src" path="/BasicMtlAntlr2TLLJava"/>
+    <classpathentry kind="lib" path="/Utils/ThirdParty/log4j/log4j.jar"/>
+    <classpathentry kind="src" path="/Utils"/>
     <classpathentry kind="output" path="bin"/>
 </classpath>
