--- a/BasicMTL_projects/TLLTypeChecker/build.xml
+++ b/BasicMTL_projects/TLLTypeChecker/build.xml
@@ -1,5 +1,5 @@
-<!-- $Id: build.xml,v 1.1 2003-08-06 15:55:27 jpthibau Exp $ -->
-<project name="TLLTypeChecker" default="compile_java" basedir=".">
+<!-- $Id: build.xml,v 1.2 2003-08-12 14:54:54 ffondeme Exp $ -->
+<project name="TLLTypeChecker" default="dist" basedir=".">
 	<description>
         Known directories for the TLLTypeChecker
 	</description>
@@ -7,6 +7,15 @@
 	<property name="src" location="src"/>
 	<property name="bin" location="bin"/>
 	<property name="dist"  location="dist"/>
+	
+	<!-- This project depends on the BasicMtlAntlr2TLLJava project -->
+	<property name="BasicMtlAntlr2TLLJava"  location="..\BasicMtlAntlr2TLLJava"/>
+	<!-- This project deeply depends on the BasicMtlAntlr2BasicMtlAstJava, BasicMtlTLLJava, BasicMtlAstJava, BasicMtlAntlr and Utils project -->
+	<property name="BasicMtlAntlr2BasicMtlAstJava"  location="..\BasicMtlAntlr2BasicMtlAstJava"/>
+	<property name="BasicMtlTLLJava"  location="..\BasicMtlTLLJava"/>
+	<property name="BasicMtlAstJava"  location="..\BasicMtlAstJava"/>
+	<property name="BasicMtlAntlr"  location="..\BasicMtlAntlr"/>
+	<property name="Utils"  location="..\Utils"/>
 
 	<target name="init">
     	<!-- Create the time stamp -->
@@ -15,6 +24,11 @@
 	    <mkdir dir="${bin}"/>
 	    <mkdir dir="${dist}"/>
 	    <mkdir dir="${dist}/bin"/>
+	    
+		<!-- This project depends on the BasicMtlAntlr2TLLJava project -->
+	    <echo>Building the "BasicMtlAntlr2TLLJava" project.</echo>
+	    <ant antfile="${BasicMtlAntlr2TLLJava}\build.xml" dir="${BasicMtlAntlr2TLLJava}" target="dist" inheritAll="false"/>
+	    <echo>"BasicMtlAntlr2TLLJava" project built.</echo>
 	</target>
 
 	<target name="compile_java" depends="init"
@@ -22,7 +36,7 @@
     	<!-- Compile the java code from ${src} into ${bin} -->
 	    <javac srcdir="${src}" 
     	    destdir="${bin}"
-   			classpath=".;ThirdParty\junit\junit.jar;ThirdParty\log4j\log4j.jar"/>
+   			classpath=".;${Utils}\bin;${BasicMtlTLLJava}\bin;${BasicMtlAntlr2TLLJava}\bin;..\Utils\ThirdParty\log4j\log4j.jar"/>
 	</target>
   	<target name="full_javadoc" 
   		description="create a full javadoc document that describes all the classes of the project">
@@ -32,23 +46,23 @@
             nodeprecatedlist="false" nodeprecated="false"
             packagenames="OperationCallChecker,TypeChecker"
             sourcepath="src"
-            classpath="bin;ThirdParty\junit\junit.jar;ThirdParty\log4j\log4j.jar" doctitle="Basic MTL TLL type checker internal Documentation">
+            classpath="bin;${Utils}\bin;${BasicMtlTLLJava}\bin;${BasicMtlAntlr2TLLJava}\bin;..\Utils\ThirdParty\log4j\log4j.jar" doctitle="Basic MTL TLL type checker internal Documentation">
             <link href="http://www.junit.org/junit/javadoc/3.8.1/index.htm"/>
             <link href="file:/T:/Soft/multiplatform/Java_lib/log4j/jakarta-log4j-1.2.8/docs/api/"/>
         </javadoc>
 	</target>
 	<target name="create_jar" depends="compile_java"
 		description="create the jar file">
-		<jar destfile="${dist}/bin/TLLTypeChecker.jar">
+		<jar destfile="${dist}/bin/${ant.project.name}.jar">
 			<!-- files to include in the jar -->
 			<fileset dir="${bin}"/>
 			<!-- manifest to include -->
 		    <manifest>
 		    	<attribute name="Built-By" value="${user.name}"/>   
 		    	<attribute name="Main-Class" value="TypeChecker.TLLtypechecking"/>
-				<attribute name="Class-Path" value="log4j.jar junit.jar BasicMtlAntlr.jar BasicMtlASTJava.jar BasicMtl2AST.jar BasicMtl2TLL.jar BasicMtlTLLJava.jar antlrfull.jar"/>
-		    	<section name="BasicMTLAntlr2TLL">
-		      		<attribute name="Specification-Title" value="BasicMTLAntlr2TLL"/>
+				<attribute name="Class-Path" value="log4j.jar junit.jar BasicMtlAntlr.jar BasicMtlASTJava.jar BasicMtl2AST.jar BasicMtl2TLL.jar BasicMtlTLLJava.jar BasicMtlAntlr2TLLJava.jar antlrfull.jar"/>
+		    	<section name="${ant.project.name}">
+		      		<attribute name="Specification-Title" value="${ant.project.name}"/>
       				<attribute name="Specification-Version" value="${TSTAMP} ${TODAY}"/>
       				<attribute name="Specification-Vendor" value="Irisa/Triskell"/>
       				<attribute name="Implementation-Title" value="common"/>
@@ -62,25 +76,14 @@
 	<target name="dist" depends="create_jar"
 		description="create a distibution">
 		<mkdir dir="${dist}"/>
-	    <copy file="../BasicMtlAntlr/dist/bin/BasicMtlAntlr.jar"
-	    	todir="${dist}/bin/"/>
-	    <copy file="../BasicMtlAntlr/ThirdParty/ANTLR/antlrfull.jar"
-	    	todir="${dist}/bin"/>
-	    <copy file="../BasicMtlAstJava/dist/bin/BasicMtlASTJava.jar"
-	    	todir="${dist}/bin/"/>
-	    <copy file="../BasicMtlAntlr2BasicMtlAstJava/dist/bin/BasicMtl2AST.jar"
-	    	todir="${dist}/bin/"/>
-	    <copy file="../BasicMtlAntlr2TLLJava/dist/bin/BasicMtl2TLL.jar"
-	    	todir="${dist}/bin/"/>
-	    <copy file="../BasicMtlTLLJava/dist/bin/BasicMtlTLLJava.jar"
-	    	todir="${dist}/bin/"/>
-	    <mkdir dir="${dist}/bin/ThirdParty/log4j"/>
-	    <copy file="ThirdParty/log4j/log4j_configuration"
-	    	todir="${dist}/bin/ThirdParty/log4j"/>
-	    <copy file="../Utils/ThirdParty/log4j/log4j.jar"
-	    	todir="${dist}/bin"/>
-	    <copy file="../Utils/ThirdParty/junit/junit.jar"
-	    	todir="${dist}/bin"/>
+		<!-- This project depends on the BasicMtlAntlr2TLLJava project -->
+		<copy todir="${dist}/bin">
+			<fileset dir="${BasicMtlAntlr2TLLJava}\dist\bin"/>
+		</copy>
+		
+	    <copy file="log4j_configuration.xml"
+	    	todir="${dist}/bin"
+	    	overwrite="true"/>
 	</target>
 
   	<target name="clean"
@@ -89,4 +92,11 @@
     	<delete dir="${bin}"/>    
       	<delete dir="${dist}"/> 
   	</target>
+
+  	<target name="deep_clean" depends="clean"
+        description="deep clean up (including depending projects)" >
+	    
+		<!-- This project depends on the BasicMtlAntlr2TLLJava project -->
+	    <ant antfile="${BasicMtlAntlr2TLLJava}\build.xml" dir="${BasicMtlAntlr2TLLJava}" target="deep_clean" inheritAll="false"/>
+    </target>
 </project>
