Added to ant a compile all BasicMTL facility Packages was changed in the ant files ; please, tell your project your sources are located to build/src/java Added the types to the standard library The special operations (=, +, -, <...) are now possible Syntax = became := (warning: only Standard and vehicule rae changed !) A standalone version of vehicule was made to test internal types (and it was a good idea !)
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@90 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/BasicMTL_projects/BasicMtl_Transformation_libraries/.project
+++ b/BasicMTL_projects/BasicMtl_Transformation_libraries/.project
@@ -3,6 +3,7 @@
 	<name>BasicMtl_Transformation_libraries</name>
 	<comment></comment>
 	<projects>
+		<project>BasicMTLRuntime</project>
 		<project>MTDataTypes</project>
 		<project>RepositoryAPI</project>
 	</projects>
