--- a/BasicMTL_projects/BasicMtl_Transformation_libraries/.classpath
+++ b/BasicMTL_projects/BasicMtl_Transformation_libraries/.classpath
@@ -5,5 +5,6 @@
     <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
     <classpathentry kind="src" path="/MTDataTypes"/>
     <classpathentry kind="src" path="/RepositoryAPI"/>
+    <classpathentry kind="src" path="/BasicMTLRuntime"/>
     <classpathentry kind="output" path="bin"/>
 </classpath>
