--- a/BasicMTL_projects/BasicMtlTLLJava/.project
+++ b/BasicMTL_projects/BasicMtlTLLJava/.project
@@ -3,6 +3,7 @@
 	<name>BasicMtlTLLJava</name>
 	<comment></comment>
 	<projects>
+		<project>Utils</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
